# docagent

./: .dockerignore  .env.cloudflare.example  .env.example  .env.prod.example  .gitignore  CLAUDE.md  README.md  docker-compose.cloudflare.yml  docker-compose.prod.local.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/scripts/: reencrypt_secrets.py
alembic/versions/: 02c972d3cdb6_merge_heads.py  8fa0cf79480e_initial_fase8.py  9ab1cd2ef3g4_add_agente_whatsapp_mcp.py  a1b2c3d4e5f6_add_atendimento.py  a2b3c4d5e6f7_add_tenant_id_to_agente.py  a3b4c5d6e7f8_add_assumido_por_to_atendimento.py  b2c3d4e5f6a7_add_contato.py  b4c5d6e7f8g9_add_llm_config.py  c3d4e5f6a7b8_add_telegram.py  d4e5f6a7b8c9_add_enum_types.py  e5f6a7b8c9d0_add_telegram_enum.py  f6a7b8c9d0e1_fix_mensagemorigem_enum.py  g7h8i9j0k1l2_add_assinatura_e_campos_plano.py  h8i9j0k1l2m3_add_vagas_pipeline.py  i9j0k1l2m3n4_add_vagas_simplificada_cols.py  j0k1l2m3n4o5_add_candidato_cv_texto.py  k1l2m3n4o5p6_add_audio_config.py  l2m3n4o5p6q7_add_conversa_e_mensagem_conversa.py  m3n4o5p6q7r8_add_audio_to_mensagem_atendimento.py  n4o5p6q7r8s9_encrypt_sensitive_fields.py  o5p6q7r8s9t0_add_audit_log.py  p6q7r8s9t0u1_add_totp_to_admin.py  q7r8s9t0u1v2_add_telegram_webhook_secret.py
compose/: Dockerfile  entrypoint.prod.sh  entrypoint.sh
docs/: fase1-design.md  fase10-design.md  fase11 - mcp.md  fase11-design.md  fase12-design.md  fase13 - atendimento.md  fase13-design.md  fase14-design.md  fase15 - documentos.md  fase17-planos-assinaturas.md  fase18-audio.md  fase2-design.md  fase20-finetuning.md  fase22-analytics.md  fase3-design.md  fase4-design.md  fase5-design.md  fase6-design.md  fase7-design.md  fase8-design.md  fase9-design.md  roadmap.md  schema.dbml
docs/drafts/: artigo-fases-18-19.md
docs/raw/: fase16 - telegram.md  fase17b-vagas.md  fase18b-turboquant.md  fase19-historico-chat.md  fase21-seguranca.md  fase23-escalabilidade.md  fase24-email-n8n.md  fase25-pwa.md
docs/wiki/: estado.md  gotchas.md  index.md  log.md
docs/wiki/fases/: 17.md  (+5 more)
evolution-api/: Dockerfile
frontend/: Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
mcp_servers/: weather.py
src/docagent/: __init__.py  agent.py  api.py  base_agent.py  celery_app.py  crypto.py  database.py  dependencies.py  doc_agent.py  ingest.py  memory.py  rate_limit.py  redis_client.py  retriever.py  session.py  settings.py  tools.py  ui.py  utils.py
tests/: conftest.py  confttest.py  test_agent.py  test_agent_registry.py  test_agents_router.py  test_api.py  test_base_agent.py  test_chat_router_v2.py  test_chat_service.py  test_configurable_agent.py  test_doc_agent.py  test_documents_router.py  test_ingest.py  test_ingest_service.py  test_memory.py  test_retriever.py  test_routers.py  test_session.py  test_skills.py  test_tools.py
tests/test_atendimento/: conftest.py  test_router.py  test_services.py  test_sse.py  test_webhook.py
tests/test_audio/: conftest.py  test_audio_router.py  test_audio_service.py  test_pipeline_integration.py  test_stt_providers.py  test_tts_providers.py  test_webhook_telegram_audio.py  test_webhook_whatsapp_audio.py
tests/test_documentos/: conftest.py  test_documento_router.py  test_documento_service.py
tests/test_escalabilidade/: conftest.py  test_celery_tasks.py  test_session_redis.py  test_sse_redis.py
tests/test_fase11/: conftest.py  test_configurable_agent_extra_tools.py  test_mcp_router.py  test_mcp_service.py
tests/test_fase12/: conftest.py  test_services.py  test_sse_manager.py  test_webhook.py
tests/test_fase17/: conftest.py  test_assinatura_router.py  test_assinatura_service.py  test_quota_router.py
tests/test_fase8/: conftest.py  test_admin.py  test_auth.py  test_tenant.py
tests/test_historico/: conftest.py  test_chat_router_com_historico.py  test_conversa_service.py
tools/: benchmark.py
(+197 files in other folders)
